# py-pears

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
py_pears/: schedule.py  utils.py
py_pears/reports/: coalition_survey_cleaning.py  monthly_data_cleaning.py  partnerships_entry.py  partnerships_intervention_type.py  quarterly_program_evaluation.py  sites_report.py  staff_report.py
py_pears/reports/outputs/: .gitignore
tests/: generate_expected_outputs.py  generate_test_inputs.py  test_pears.py  test_reports.py
tests/expected_outputs/: CPHP Partnerships Data Entry 2022-09.xlsx  CPHP Staff PEARS Entries 2022-09.xlsx  DHS Report FY2022 Q4.xlsx  Extension Staff PEARS Entries 2022-09.xlsx  Monthly PEARS Corrections 2022-09.xlsx  PEARS Sites Report 2022-09.xlsx  Quarterly Coalition Survey Entry Q4.xlsx  SNAP-Ed Partnerships Data Entry 2022-09.xlsx  test_wb_2.xlsx  test_wb_3.xlsx
tests/test_example/: test_some_function.py
tests/test_inputs/: FY22_INEP_Staff_List.xlsx  FY23_INEP_Staff_List.xlsx  Illinois Extension Unit Counties.xlsx  Update Notifications.xlsx  test_wb_1.xlsx
tests/test_inputs/pears/: Action_Plan_Outcomes_Export.xlsx  Action_Plans_Export.xlsx  Coalition_Export.xlsx  Indirect_Activity_Export.xlsx  PSE_Site_Activity_Export.xlsx  Partnership_Export.xlsx  Program_Activities_Export.xlsx  Quarterly_Effort_Export.xlsx  Social_Marketing_Campaigns_Export.xlsx  Success_Story_Export.xlsx  User_Export.xlsx
tests/test_inputs/pears/prev_year/: Coalition_Export.xlsx  (+4 more)
tests/test_outputs/: test_compare_workbooks_false_diff.xlsx  test_compare_workbooks_true_diff.xlsx
(+4 files in other folders)
