[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "py-pears"
description = "This is how python package should look like!"
version = "0.1.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/jstadni2/py-pears"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.57"
openpyxl = "^3.0.7"
pandas = "^1.2.3"
XlsxWriter = "^1.3.8"
faker = "^15.0.0"
faker_education = "^1.2.1"

# Docs, optional, use `poetry install -E docs` to install them:
sphinx = { version = "^5.1",  optional = true }
sphinx-autodoc-typehints = { version = "^1.19", optional = true }
m2r2 = { version = "^0.3",  optional = true }
tomlkit = { version = "^0.11", optional = true }

[tool.poetry.dev-dependencies]
mypy = "^0.971"

wemake-python-styleguide = "^0.16"
flake8-pytest-style = "^1.6"
doc8 = "^1.0"
nitpick = "^0.32"

safety = "^2.1"

pytest = "^7.1"
pytest-cov = "^3.0"
pytest-randomly = "^3.12"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints", "m2r2", "tomlkit"]

[tool.poetry.scripts]
schedule = 'py_pears.schedule:main'
generate_test_inputs = 'tests.generate_test_inputs:main'
generate_expected_outputs = 'tests.generate_expected_outputs:main'
